--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,27 @@
 {
-    "rewrites": [
-        { "source": "/(.*)", "destination": "/" }
+    "version": 2,
+    "builds": [
+        {
+            "src": "server/server.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "client/**",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/server/server.js"
+        },
+        {
+            "src": "/",
+            "dest": "/client/index.html"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/client/$1"
+        }
     ]
 }
