--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
             "dest": "/server/server.js"
         },
         {
+            "src": "/socket.io/(.*)",
+            "dest": "/server/server.js"
+        },
+        {
             "src": "/",
             "dest": "/client/index.html"
         },
